# arc-theme

./: .gitignore  AUTHORS  Arc-Pro Recolor Guide  HACKING.md  Makefile.am  README.md  autogen.sh  change_color.sh  configure.ac  gulpfile.js  mkrelease.sh
.github/: ISSUE_TEMPLATE.md
common/: Makefile.am  compile-gresources.sh  index.theme  index.theme-dark  index.theme-darker
common/cinnamon/: cinnamon-dark.css  cinnamon.css
common/cinnamon/sass/: _common.scss
common/gnome-shell/3.18/sass/: _colors.scss  _common.scss  gnome-shell-solid.scss
common/gnome-shell/3.26/sass/: _common.scss
common/gnome-shell/3.30/: common-assets  dark-assets
common/gnome-shell/3.30/sass/: _colors.scss  _common.scss  gnome-shell-solid-dark.scss
common/gnome-shell/3.32/: common-assets  dark-assets  light-assets
common/gnome-shell/3.32/sass/: _colors.scss  _common.scss  _drawing.scss
common/gtk-2.0/: Makefile.am  gtkrc  gtkrc-dark  gtkrc-darker  main.rc  panel.rc  render-asset.sh  render-assets.sh  xfce-notify.rc
common/gtk-2.0/darker/: gtkrc
common/gtk-2.0/menubar-toolbar/: menubar-toolbar-dark.rc  menubar-toolbar.rc
common/gtk-3.0/: Makefile.am  _colors.scss.thpl  common.am
common/gtk-3.0/3.18/: Makefile.am  compile-gresources.sh  gtk-darker.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.18/sass/: _applications.scss  _colors.scss.thpl  _common.scss  _lightdm.scss
common/gtk-3.0/3.20/: Makefile.am  assets.txt  compile-gresources.sh  compile-script.txt  gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css  render-asset.sh  render-assets.sh
common/gtk-3.0/3.20/sass/: _applications.scss  _budgie.scss  _colors.scss  _common.scss  _lightdm.scss  gtk-dark.scss  gtk-darker.scss  gtk-solid-dark.scss  gtk-solid-darker.scss  gtk-solid.scss  gtk.scss
common/metacity-1/: metacity-theme-2-dark.xml  metacity-theme-2.xml  metacity-theme-3.xml
common/xfwm4/: Makefile.am  render-asset.sh  render-assets.sh
debian/: arc-theme.install  changelog  control  copyright  files  rules  watch
debian/upstream/: metadata
extra/: Makefile.am
m4/: arc-gnome-shell.m4  arc-gtk3.m4
